--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             width: 400px;
             text-align: center;
             position: relative;
-            margin: 0 auto;
+            margin: 15% auto;
         }
 
         .upload-btn {
