--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
             font-weight: bold;
             margin-bottom: 10px;
             display: block;
+			text-align: left;
         }
 
         .item-list li .media-container {
-            width: 30%;
             margin: 0 auto;
         }
 
