--- a/index.html
+++ b/index.html
@@ -335,19 +335,19 @@
 
     <script>
         var lista1 = [
-            {"nome": "Teste de vídeo", "source": "C:\\Users\\F\\Documents\\Overwatch\\videos\\overwatch\\file_24-09-21_19-03-11.mp4", "type": 1, "filetype": 1},
-            {"nome": "Teste de vídeo 2", "source": "C:\\Users\\F\\Documents\\Overwatch\\videos\\overwatch\\file_24-09-22_01-37-29.mp4", "type": 1, "filetype": 1},
-            {"nome": "Teste de vídeo 3", "source": "C:\\Users\\F\\Documents\\Overwatch\\videos\\overwatch\\file_24-09-26_00-39-21.mp4", "type": 1, "filetype": 1}
+            {"nome": "Teste de vídeo", "source": "https://videos.pexels.com/video-files/11741924/11741924-hd_1920_1080_25fps.mp4", "type": 1, "filetype": 1},
+            {"nome": "Teste de vídeo 2", "source": "https://videos.pexels.com/video-files/11741924/11741924-hd_1920_1080_25fps.mp4", "type": 1, "filetype": 1},
+            {"nome": "Teste de vídeo 3", "source": "https://videos.pexels.com/video-files/11741924/11741924-hd_1920_1080_25fps.mp4", "type": 1, "filetype": 1}
         ];
         
         var lista2 = [
-            {"nome": "Novo teste", "source": "E:\\Captures\\Monster Hunter Wilds 2025-03-05 20-14-01.mp4", "type": 2, "filetype": 1},
-            {"nome": "Novo teste 2", "source": "E:\\Captures\\Monster Hunter Wilds 2025-03-18 22-30-00.mp4", "type": 2, "filetype": 1},
-            {"nome": "Novo teste 3", "source": "E:\\Captures\\Monster Hunter Wilds 2025-03-04 16-40-13.mp4", "type": 2, "filetype": 1}
+            {"nome": "Novo teste", "source": "https://videos.pexels.com/video-files/5650360/5650360-uhd_2560_1440_30fps.mp4", "type": 2, "filetype": 1},
+            {"nome": "Novo teste 2", "source": "https://videos.pexels.com/video-files/5650360/5650360-uhd_2560_1440_30fps.mp4", "type": 2, "filetype": 1},
+            {"nome": "Novo teste 3", "source": "https://videos.pexels.com/video-files/5650360/5650360-uhd_2560_1440_30fps.mp4", "type": 2, "filetype": 1}
         ];
         
         var lista3 = [
-            {"nome": "Multimidia", "source": "E:\\Captures\\MONSTER HUNTER_ WORLD(421471) 2022-08-19 22-54-24.mp4", "type": 3, "filetype": 1},
+            {"nome": "Multimidia", "source": "https://videos.pexels.com/video-files/8241243/8241243-uhd_2560_1440_30fps.mp4", "type": 3, "filetype": 1},
             {"nome": "Multimidia 2", "source": "https://static.wikia.nocookie.net/sonic-x9874/images/e/ea/Sonic_X_-_Logo.png/revision/latest?cb=20160227161049", "type": 3, "filetype": 2},
             {"nome": "Multimidia 3", "source": "https://www.myinstants.com/media/sounds/discord-call-sound.mp3", "type": 3, "filetype": 3}
         ];
